fix: correct getter calls in QuickRegisterDTO, EmployeeRequestDTO record accessor, and deprecated Locale constructor